# ft_ls

./: .gitignore  CMakeLists.txt  Makefile  a.out  author  bust.c  conclusion_without_flags.c  flags.c  free_func.c  ft_ls  ft_ls.c  ft_ls.cbp  ft_ls.h  header.h  init.c  lst_func.c  matrix_sort.c  navigation.c  no_such_check.c  number_of_files.c  print.c  print_l.c  print_total.c  push_back.c  rec_penetration.c  restruct.c  sort_by_ascii.c  struct_filenames.c  struct_sort.c  whatsspecific.c
ft_ls.dSYM/Contents/Resources/DWARF/: ft_ls
lib/: ft_memalloc.c
libft/: CMakeLists.txt  Makefile  ft_addsymb.c  ft_addsymbend.c  ft_matrixfree.c  ft_puterror.c  ft_putmatrix.c  ft_strdel.c  ft_strencut.c  ft_strncut.c  ft_strswap.c  libft.h  push_back.c
